option('pg_config',
       type: 'string',
       value: '',
       description: 'Path to pg_config')
option('message_pack',
       type: 'feature',
       value: 'auto',
       description: 'Enable MessagePack support')
option('xxhash',
       type: 'feature',
       value: 'auto',
       description: 'Enable xxHash support')
