option('install_to_postgresql',
       type: 'boolean',
       value: true,
       description: 'Install to PostgreSQL directory')
option('message_pack',
       type: 'feature',
       value: 'auto',
       description: 'Enable MessagePack support')
option('pg_config',
       type: 'string',
       value: '',
       description: 'Path to pg_config')
option('test',
       type: 'boolean',
       value: true,
       description: 'Enable test')
option('xxhash',
       type: 'feature',
       value: 'auto',
       description: 'Enable xxHash support')
